[Frontend] Fix nick entry prompt in dark mode

--- a/src/static/dev/room-dark.css
+++ b/src/static/dev/room-dark.css
@@ -74,7 +74,8 @@ a.logo-small {
   background: rgba(0, 0, 0, 0.5);
 }
 
-.input-bar, .input-bar .input-message-cell .input-message {
+.input-bar, .input-bar .input-message-cell .input-message,
+.input-bar .input-message-cell .input-nick-prompt {
   color: white;
   background: black;
 }
